--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary-core": "^2.14.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.511.0",
     "next": "latest",
     "next-themes": "^0.4.6",
