--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@p5-wrapper/react": "^4.4.2",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
@@ -25,8 +26,10 @@
     "lucide-react": "^0.511.0",
     "next": "latest",
     "next-themes": "^0.4.6",
+    "p5": "^2.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-p5-wrapper": "^4.1.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0"
   },
