--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cloudinary-core": "^2.14.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.511.0",
     "next": "latest",
     "next-themes": "^0.4.6",
